<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_connect"
        android:title="@string/bottom_panel_connect"
        android:icon="@drawable/ic_baseline_link_off_50"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" />

    <item
        android:id="@+id/item_disconnect"
        android:title="@string/bottom_panel_disconnect"
        android:icon="@drawable/ic_baseline_link_50"
        android:visible="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_start_program"
        android:title="@string/bottom_panel_run"
        android:icon="@drawable/ic_baseline_run_50"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_stop_program"
        android:title="@string/bottom_panel_stop"
        android:icon="@drawable/ic_baseline_stop_50"
        android:visible="false"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_pause_program"
        android:title="@string/bottom_panel_pause"
        android:icon="@drawable/ic_baseline_pause_50"
        android:visible="false"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
</menu>