<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/ib_connect"
                    style="@style/bottom_panel_button"

                    android:src="@drawable/ic_baseline_link_off_24_red"
                    android:contentDescription="@string/bottom_panel_connect"/>

                <ImageButton
                    android:id="@+id/ib_start_program"
                    style="@style/bottom_panel_button"

                    android:src="@drawable/ic_baseline_play_arrow_24"
                    android:contentDescription="@string/bottom_panel_run"/>

                <ImageButton
                    android:id="@+id/ib_pause_program"
                    style="@style/bottom_panel_button"

                    android:src="@drawable/ic_baseline_pause_24"
                    android:contentDescription="@string/bottom_panel_pause"

                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/ib_stop_program"
                    style="@style/bottom_panel_button"

                    android:src="@drawable/ic_baseline_stop_24"
                    android:contentDescription="@string/bottom_panel_stop"

                    android:visibility="gone"/>
        </LinearLayout>
</layout>
